syntax = "proto3";

package ns.protocol;

option go_package = "github.com/13k/night-stalker/internal/protobuf/protocol";

enum CollectionOp {
  COLLECTION_OP_UNSPECIFIED = 0;
  COLLECTION_OP_REPLACE = 1;
  COLLECTION_OP_ADD = 2;
  COLLECTION_OP_UPDATE = 3;
  COLLECTION_OP_REMOVE = 4;
}
